First working fdb transaction

--- a/fdb/Cargo.toml
+++ b/fdb/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2021"
 
 [features]
 default = ["fdb-c/fdb_710"]
-fdb_510 = ["fdb-c/fdb_510"]
-fdb_520 = ["fdb-c/fdb_520"]
-fdb_600 = ["fdb-c/fdb_600"]
-fdb_610 = ["fdb-c/fdb_610"]
-fdb_620 = ["fdb-c/fdb_620"]
-fdb_630 = ["fdb-c/fdb_630"]
-fdb_700 = ["fdb-c/fdb_700"]
-fdb_710 = ["fdb-c/fdb_710"]
-fdb_730 = ["fdb-c/fdb_730"]
+510 = ["fdb-c/fdb_510"]
+520 = ["fdb-c/fdb_520"]
+600 = ["fdb-c/fdb_600"]
+610 = ["fdb-c/fdb_610"]
+620 = ["fdb-c/fdb_620"]
+630 = ["fdb-c/fdb_630"]
+700 = ["fdb-c/fdb_700"]
+710 = ["fdb-c/fdb_710"]
+730 = ["fdb-c/fdb_730"]
 
 [dependencies]
 fdb-c = {path = "../fdb-c"  }
