--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fdb = { path = "../fdb", features = ["710"] }
+fdb = { path = "../fdb", features = ["630"] }
 tokio = { version = "1", features = ["full"] }
 bytes = "1"
 redis-protocol = { version = "5.0.1", features = ["bytes", "codec", "decode-logs", "convert", "index-map"] }
+nom = { version = "7.1.3" }
