--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -9,4 +9,6 @@ tokio = { version = "1", features = ["full"] }
 bytes = "1"
 redis-protocol = { version = "5.0.1", features = ["bytes", "codec", "decode-logs", "convert", "index-map"] }
 nom = { version = "7.1.3" }
-clap = { version = "4.5.9", features = ["derive"] }
+num-bigint = "0.4"
+num-traits = "0.2.19"
+serde = { version = "1.0", features = ["derive"] }
