--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 fdb = { path = "../fdb", features = ["710"] }
 tokio = { version = "1", features = ["full"] }
 bytes = "1"
-redis-protocol = { version = "5.0.1", features = ["bytes", "codec", "decode-logs", "convert", "index-map"] }
 nom = { version = "7.1.3" }
 num-bigint = "0.4"
 num-traits = "0.2.19"
 serde = { version = "1.0", features = ["derive"] }
+thiserror = { version = "1" }
