--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -12,3 +12,6 @@ num-bigint = "0.4"
 num-traits = "0.2.19"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = { version = "1" }
+
+[dev-dependencies]
+serde_json = "1.0.120"
