--- a/redis/Cargo.toml
+++ b/redis/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 fdb = { path = "../fdb", features = ["710"] }
+macro_derive = { path = "../macro_derive" }
 tokio = { version = "1", features = ["full"] }
 bytes = "1"
 nom = { version = "7.1.3" }
@@ -12,6 +13,5 @@ num-bigint = "0.4"
 num-traits = "0.2.19"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = { version = "1" }
+log = "0.4.22"
 
-[dev-dependencies]
-serde_json = "1.0.120"
