--- a/src/redis/Cargo.toml
+++ b/src/redis/Cargo.toml
@@ -11,7 +11,7 @@ bytes = "1"
 nom = { version = "7.1.3" }
 num-bigint = "0.4"
 num-traits = "0.2.19"
-serde = { version = "1.0", features = ["derive"] }
+serde = { features = ["derive"], path = "../../deps/serde" }
 thiserror = { version = "1" }
 log = "0.4.22"
 
